payara: added latest JDK options for payara to run correctly